# VirtualMidiTranslator

./: CMakeLists.txt  MidiMapper.cpp  MidiMapper.h  main.cpp  readme.md
testmapping/: ddjxp2.json  virtualpiano.json
